--- a/.github/workflows/pr_analyzer.yml
+++ b/.github/workflows/pr_analyzer.yml
@@ -14,6 +14,30 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Debug API Key y entorno
+        env:
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+        run: |
+          echo "== Debug de entorno =="
+          echo "Directorio actual: $(pwd)"
+          echo
+          echo "Archivos en raíz:"
+          ls -la
+          echo
+          echo "Valor recibido en GOOGLE_API_KEY (solo longitud por seguridad):"
+          if [ -z "$GOOGLE_API_KEY" ]; then
+            echo "❌ GOOGLE_API_KEY está vacío"
+          else
+            echo "✅ GOOGLE_API_KEY tiene longitud ${#GOOGLE_API_KEY}"
+          fi
+          echo
+          echo "Creando archivo .env..."
+          echo "GOOGLE_API_KEY=${GOOGLE_API_KEY}" > .env
+          echo
+          echo "Contenido de .env:"
+          cat .env || echo "no se pudo leer"
+          echo
+          echo "== Fin del debug =="
       - name: Configurar API Key
         env:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
@@ -51,3 +75,4 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           path: pull_request_*.log
+
