--- a/.github/workflows/pr_analyzer.yml
+++ b/.github/workflows/pr_analyzer.yml
@@ -62,13 +62,13 @@ jobs:
         env:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
         run: |
-          python3 -m src.GoodDev | tee pullrequest$(date +'%d-%m').log
+          python3 -m src.GoodDev | tee pullrequest.log
 
       - name: Subir log como artifact
         uses: actions/upload-artifact@v4
         with:
           name: pull_request_log
-          path: pull_request_*.log
+          path: pull_request.log
 
       - name: Comentar resultado en el PR
         if: always()
