--- a/.github/workflows/pr_analyzer.yml
+++ b/.github/workflows/pr_analyzer.yml
@@ -63,6 +63,13 @@ jobs:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
         run: |
           python3 -m src.GoodDev | tee $GITHUB_WORKSPACE/pull_request.log
+             
+      - name: Comentar resultado en el PR
+        if: success()
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          path: pull_request.log
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Subir log como artifact
         uses: actions/upload-artifact@v4
@@ -70,10 +77,3 @@ jobs:
           name: pull_request_log
           path: ${{ github.workspace }}/pull_request.log
           if-no-files-found: error
-
-      - name: Comentar resultado en el PR
-        if: always()
-        uses: marocchino/sticky-pull-request-comment@v2
-        with:
-          path: pull_request_*.log
-
