--- a/.github/workflows/pr_analyzer.yml
+++ b/.github/workflows/pr_analyzer.yml
@@ -4,12 +4,18 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+# ✅ Permisos necesarios para que el bot pueda comentar en los PRs
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 jobs:
   analyze:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout codigo
+      - name: Checkout código
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -38,9 +44,10 @@ jobs:
           cat .env || echo "no se pudo leer"
           echo
           echo "== Fin del debug =="
+
       - name: Configurar API Key
         env:
-          GOOGLE_API_KEY: 'AIzaSyBTVGsfvoys5SIdzJDMRJ5_unUkR_2atyw'
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
         run: |
           echo "GOOGLE_API_KEY=${GOOGLE_API_KEY}" > .env
 
@@ -57,14 +64,13 @@ jobs:
         run: |
           git fetch origin +refs/pull/${{ github.event.pull_request.number }}/merge
           git diff FETCH_HEAD^ FETCH_HEAD > code.js
+          echo "✅ Archivo code.js generado con el diff del PR"
 
       - name: Ejecutar análisis
         env:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
         run: |
           python3 -m src.GoodDev | tee $GITHUB_WORKSPACE/pull_request.log
-
-     
 
       - name: Subir log como artifact
         uses: actions/upload-artifact@v4
@@ -73,5 +79,10 @@ jobs:
           path: ${{ github.workspace }}/pull_request.log
           if-no-files-found: error
 
-      
-
+      # ✅ Nuevo paso para comentar el resultado en el PR
+      - name: Comentar resultado en el PR
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          path: ${{ github.workspace }}/pull_request.log
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
