--- a/.github/workflows/pr_analyzer.yml
+++ b/.github/workflows/pr_analyzer.yml
@@ -15,6 +15,11 @@ jobs:
     steps:
       - name: Checkout código
         uses: actions/checkout@v4
+        with:
+        fetch-depth: 0      
+        ref: ${{ github.event.pull_request.head.ref }}
+        repository: ${{ github.repository }}
+
 
       - name: Configurar entorno
         env:
